fixes horizontal scrolling bug that adds whitespace

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -64,17 +64,17 @@ html, body {
   text-align: center;
 }
 .scrolling-wrapper-flexbox {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  height: 80vh;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  max-height: 70vh;
 }
 
   .card {
-    flex: 0 0 auto;
-    flex-grow: 0;
+    display: inline-block;
+    max-height: 100%;
   }
 
   .card img {
-    max-height: 100%;
+    max-height: 500px;
   }
